# taiginator

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: cli.rs  client.rs  config.rs  daemon.rs  ipc.rs  main.rs  task.rs
