[package]
name = "taiga"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.54", features = ["derive"]}
regex = "1.12.2"
confy = "2.0.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
dirs = "6.0.0"
chrono = { version="0.4.42", features = ["serde"] }
chrono-english = "0.1.8"
