[package]
name = "taiga"
version = "0.1.1"
authors = ["Tadeas Tran"]
license = "MIT"
edition = "2024"

[package.metadata.taiga]
codename = "YATTA (Yet Another Terminal Task App)"

[dependencies]
clap = { version = "4.5.54", features = ["derive"] }
regex = "1.12.2"
notify-rust = "4.11.7"
confy = "2.0.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
dirs = "6.0.0"
directories = "6.0.0"
chrono = { version = "0.4.42", features = ["serde"] }
chrono-english = "0.1.8"
tokio = { version = "1.49.0", features = ["full"] }
interprocess = { version = "2.2.3", features = ["tokio"] }

[build-dependencies]
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9"
